infraestructura/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /apple
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port: 
                  number: 8080
          - path: /banana
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port: 
                  number: 8080
          - path: /users(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port: 
                  number: 80
